# mantis

./: .coveragerc  .gitignore  LICENSE.md  README.md  copilot-instructions.md  main.py  options-example.toml  pyproject.toml  requirements.txt
.github/workflows/: auto-merge-version-bump.yml  python-app-ci.yml  release.yml  tag-after-merge.yml
jira/: __init__.py  jira_auth.py  jira_client.py  jira_issues.py  jira_options.py
jira/utils/: __init__.py  fetch_enums.py
mantis/: main.py
mantis/assistant/: assistant.py  make_verbose.py
mantis/drafts/: __init__.py  template.md
mantis/jira/: __init__.py  auto_complete.py  issue_field.py  jira_auth.py  jira_client.py  jira_issues.py  jira_options.py
plugins/: __init__.py  bug_createmeta.py  epic_createmeta.py  plugins_test.py  subtask_createmeta.py
scripts/: development-functions.sh
src/: main.py
src/assistant/: __init__.py  assistant.py
tests/: conftest.py  test_assistant.py  test_draft_fields.py  test_draft_real-2.py  test_draft_real.py  test_draft_real_basic.py  test_draft_real_errors.py  test_draft_real_fileops.py  test_draft_template.py  test_draft_validate.py  test_issue_field.py  test_jira_auth.py  test_jira_autocomplete.py  test_jira_cache.py  test_jira_client.py  test_jira_config_loader.py  test_jira_config_loader_errors.py  test_jira_drafts.py  test_jira_fetch_enums.py  test_jira_inspector.py  test_jira_issue_field_schema_python_type.py  test_jira_issues.py  test_jira_issues_edge.py  test_jira_options.py  test_jira_types.py  test_main.py  test_meta_model_factories_errors.py  test_openai_client.py
(+82 files in other folders)
