[project]
name = "mantis"
version = "0.3.3"
description = "CLI for locally managing Jira issues"
authors = [{ name = "casperlehmann", email = "6682833+casperlehmann@users.noreply.github.com" }]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = { file = "LICENSE.md" }
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
    "requests-auth (>=8.0.0,<9.0.0)",
    "pytest-xdist (>=3.7.0,<4.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "datamodel-code-generator (>=0.31.0,<0.32.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "xdg-base-dirs (>=6.0.2,<7.0.0)",
]

[project.scripts]
mantis = "main:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.sdist]
include = [
    "src/mantis",
    "mantis/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/mantis",
    "mantis/py.typed",
]

[tool.hatch.build.targets.wheel.sources]
"src/mantis" = "mantis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[mypy]

[[requests.auth]]
follow_untyped_imports = "True"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
